--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
 	"bugs": {
 		"url": "https://github.com/JacobLinCool/cpta/issues"
 	},
-	"homepage": "https://jacoblincool.github.io/cpta"
+	"homepage": "https://jacoblincool.github.io/cpta",
+	"packageManager": "pnpm@8.10.0"
 }
