--- a/packages/cpta/package.json
+++ b/packages/cpta/package.json
@@ -26,6 +26,7 @@
 		"file-type": "^18.5.0",
 		"memory-streams": "^0.1.3",
 		"tar": "^6.2.0",
+		"xlsx": "^0.18.5",
 		"zx": "^7.2.3"
 	},
 	"devDependencies": {
