--- a/packages/cpta/package.json
+++ b/packages/cpta/package.json
@@ -25,6 +25,7 @@
 		"commander": "^12.0.0",
 		"debug": "^4.3.4",
 		"dockerode": "^4.0.2",
+		"dotenv": "^16.4.5",
 		"file-type": "^19.0.0",
 		"memory-streams": "^0.1.3",
 		"tar": "^6.2.0",
