--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Setup PNPM
-              uses: pnpm/action-setup@v2.4.0
+              uses: pnpm/action-setup@v3
               with:
                   run_install: true
 
@@ -36,13 +36,13 @@ jobs:
               run: pnpm -r build && pnpm build:docs
 
             - name: Setup Pages
-              uses: actions/configure-pages@v3
+              uses: actions/configure-pages@v4
 
             - name: Upload artifact
-              uses: actions/upload-pages-artifact@v2
+              uses: actions/upload-pages-artifact@v3
               with:
                   path: "docs"
 
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@main
+              uses: actions/deploy-pages@v4
